basic framework completed

--- a/TravelPlan/WebContent/WEB-INF/web.xml
+++ b/TravelPlan/WebContent/WEB-INF/web.xml
@@ -18,14 +18,14 @@
 		</init-param>
 		<init-param>
 			<param-name>jdbcURL</param-name>
-			<!-- <param-value>   jdbc:mysql:///mutual    </param-value> -->
+			<param-value>   jdbc:mysql:///travel    </param-value>
 
-			<param-value> jdbc:mysql://aaqk2yb41pg20r.caqnzxxu2pxb.us-east-1.rds.amazonaws.com:3306/ebdb</param-value>
+			<!-- <param-value> jdbc:mysql://aaqk2yb41pg20r.caqnzxxu2pxb.us-east-1.rds.amazonaws.com:3306/ebdb</param-value> -->
 		</init-param>
 	</servlet>
 
-	
-	
+
+
 
 	<servlet-mapping>
 		<servlet-name>controller</servlet-name>
