--- a/TravelPlan/.classpath
+++ b/TravelPlan/.classpath
@@ -22,6 +22,9 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-1.1.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/standard-1.1.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/unirest-java-1.3.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpasyncclient-4.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpcore-nio-4.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
