--- a/TravelPlan/.classpath
+++ b/TravelPlan/.classpath
@@ -25,6 +25,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/unirest-java-1.3.3.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpasyncclient-4.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpcore-nio-4.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpclient-cache-4.3.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fluent-hc-4.3.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
